public class ATM {
    public static void main(String[] args) {
        ATMContext atmContext = new ATMContext();
        atmContext.runATM();
    }
}
